--- a/styles/email/css/email.css
+++ b/styles/email/css/email.css
@@ -1,708 +1,53 @@
 html {
-    font-family: sans-serif;
-}
-body {
-    width: 95%;
-    margin: 2% auto;
-    font-family: Calibri, sans-serif;
-    font-size: 92%;
-    color: #333;
-    margin:0px;
-    margin-auto:0px;
-    mso-line-height-rule: exactly;
-    line-height:110%;
-}
-article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary {
-    display: block;
-}
-progress {
-    vertical-align: baseline;
-}
-[hidden],template {
-    display: none;
-}
-a {
-    background-color: transparent;
-    color: #527d9a;
-    text-decoration: none;
-}
-a: active,a: hover {
-    outline-width: 0;
-}
-a: hover {
-    color: #035;
-    border-bottom: 1px dotted;
-}
-abbr[title] {
-    border-bottom: none;
-    text-decoration: underline;
-    text-decoration: underline dotted;
-}
-b,strong {
-    font-weight: inherit;
-    font-weight: bolder;
-}
-dfn {
-    font-style: italic;
-}
-h1 {
-    font-size: 2em;
-    margin: .67em 0;
-}
-mark {
-    background-color: #ff0;
-    color: #000;
-}
-small {
-    font-size: 80%;
-}
-sub,sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
-}
-sub {
-    bottom: -.25em;
-}
-sup {
-    top: -.5em;
-}
-img {
-    border-style: none;
-}
-svg: not(: root) {
-    overflow: hidden;
-}
-code,kbd,pre,samp {
-    font-family: Inconsolata,monospace;
-    font-size: 1em;
-    background-color: #E5EBF4;
-    border: none;
-}
-figure {
-    margin: 1em 40px;
-}
-hr {
-    box-sizing: content-box;
-    height: 0;
-    overflow: visible;
-}
-[type=checkbox] {
-    box-sizing: border-box;
-    padding: 0;
-}
-.org-bold {
-    font-weight: 700;
-}
-.org-bold-italic {
-    font-weight: 700;
-    font-style: italic;
-}
-.org-buffer-menu-buffer {
-    font-weight: 700;
-}
-.org-builtin {
-    color: #483d8b;
-}
-.org-button {
-    color: #3a5fcd;
-    text-decoration: underline;
-}
-.org-calendar-month-header {
-    color: #00f;
-}
-.org-calendar-today {
-    text-decoration: underline;
-}
-.org-calendar-weekday-header {
-    color: #008b8b;
-}
-.org-calendar-weekend-header {
-    color: #b22222;
-}
-.org-comint-highlight-input {
-    font-weight: 700;
-}
-.org-comint-highlight-prompt {
-    color: #0000cd;
-}
-.org-comment,.org-comment-delimiter {
-    color: #b22222;
-}
-.org-constant {
-    color: #008b8b;
-}
-.org-diary {
-    color: red;
-}
-.org-doc {
-    color: #8b2252;
-}
-.org-error {
-    color: red;
-    font-weight: 700;
-}
-.org-escape-glyph {
-    color: brown;
-}
-.org-file-name-shadow {
-    color: #7f7f7f;
-}
-.org-fringe {
-    background-color: #f2f2f2;
-}
-.org-function-name {
-    color: #00f;
-}
-.org-glyphless-char {
-    font-size: 60%;
-}
-.org-header-line {
-    color: #333;
-    background-color: #e5e5e5;
-}
-.org-help-argument-name {
-    font-style: italic;
-}
-.org-highlight {
-    background-color: #b4eeb4;
-}
-.org-holiday {
-    background-color: pink;
-}
-.org-info-header-node {
-    color: brown;
-    font-weight: 700;
-    font-style: italic;
-}
-.org-info-header-xref {
-    color: #3a5fcd;
-    text-decoration: underline;
-}
-.org-info-index-match {
-    background-color: #ff0;
-}
-.org-info-menu-header {
-    font-weight: 700;
-}
-.org-info-menu-star {
-    color: red;
-}
-.org-info-node {
-    color: brown;
-    font-weight: 700;
-    font-style: italic;
-}
-.org-info-title-1 {
-    font-size: 172%;
-    font-weight: 700;
-}
-.org-info-title-2 {
-    font-size: 144%;
-    font-weight: 700;
-}
-.org-info-title-3 {
-    font-size: 120%;
-    font-weight: 700;
-}
-.org-info-title-4 {
-    font-weight: 700;
-}
-.org-info-xref {
-    color: #3a5fcd;
-    text-decoration: underline;
-}
-.org-italic {
-    font-style: italic;
-}
-.org-keyword {
-    color: #a020f0;
-}
-.org-lazy-highlight {
-    background-color: #afeeee;
-}
-.org-link {
-    color: #3a5fcd;
-    text-decoration: underline;
-}
-.org-link-visited {
-    color: #8b008b;
-    text-decoration: underline;
-}
-.org-makefile-makepp-perl {
-    background-color: #bfefff;
-}
-.org-makefile-space {
-    background-color: #ff69b4;
-}
-.org-makefile-targets {
-    color: #00f;
-}
-.org-match {
-    background-color: #ff0;
-}
-.org-next-error {
-    background-color: gtk_selection_bg_color;
-}
-.org-nobreak-space {
-    color: brown;
-    text-decoration: underline;
-}
-.org-org-agenda-calendar-event,.org-org-agenda-calendar-sexp {
-    color: #000;
-    background-color: #fff;
-}
-.org-org-agenda-clocking {
-    background-color: #ff0;
-}
-.org-org-agenda-column-dateline {
-    background-color: #e5e5e5;
-}
-.org-org-agenda-current-time {
-    color: #b8860b;
-}
-.org-org-agenda-date {
-    color: #00f;
-}
-.org-org-agenda-date-today {
-    color: #00f;
-    font-weight: 700;
-    font-style: italic;
-}
-.org-org-agenda-date-weekend {
-    color: #00f;
-    font-weight: 700;
-}
-.org-org-agenda-diary {
-    color: #000;
-    background-color: #fff;
-}
-.org-org-agenda-dimmed-todo {
-    color: #7f7f7f;
-}
-.org-org-agenda-done {
-    color: #228b22;
-}
-.org-org-agenda-filter-category,.org-org-agenda-filter-effort,.org-org-agenda-filter-regexp,.org-org-agenda-filter-tags {
-    color: #000;
-    background-color: #bfbfbf;
-}
-.org-org-agenda-restriction-lock {
-    background-color: #eee;
-}
-.org-org-agenda-structure {
-    color: #00f;
-}
-.org-org-archived,.org-org-block {
-    color: #7f7f7f;
-}
-.org-org-block-begin-line,.org-org-block-end-line {
-    color: #b22222;
-}
-.org-org-checkbox {
-    font-weight: 700;
-}
-.org-org-checkbox-statistics-done {
-    color: #228b22;
-    font-weight: 700;
-}
-.org-org-checkbox-statistics-todo {
-    color: red;
-    font-weight: 700;
-}
-.org-org-clock-overlay {
-    color: #000;
-    background-color: #d3d3d3;
-}
-.org-org-code {
-    color: #7f7f7f;
-}
-.org-org-column,.org-org-column-title {
-    background-color: #e5e5e5;
-}
-.org-org-column-title {
-    font-weight: 700;
-    text-decoration: underline;
-}
-.org-org-date {
-    color: #a020f0;
-    text-decoration: underline;
-}
-.org-org-date-selected {
-    color: red;
-}
-.org-org-default {
-    color: #000;
-    background-color: #fff;
-}
-.org-org-document-info {
-    color: #191970;
-}
-.org-org-document-info-keyword {
-    color: #7f7f7f;
-}
-.org-org-document-title {
-    color: #191970;
-    font-weight: 700;
-}
-.org-org-done {
-    color: #228b22;
-    font-weight: 700;
-}
-.org-org-drawer {
-    color: #00f;
-}
-.org-org-ellipsis {
-    color: #b8860b;
-    text-decoration: underline;
-}
-.org-org-footnote {
-    color: #a020f0;
-    text-decoration: underline;
-}
-.org-org-formula {
-    color: #b22222;
-}
-.org-org-headline-done {
-    color: #bc8f8f;
-}
-.org-org-hide {
-    color: #fff;
-}
-.org-org-latex-and-related {
-    color: #8b4513;
-}
-.org-org-level-1 {
-    color: #00f;
-}
-.org-org-level-2 {
-    color: sienna;
-}
-.org-org-level-3 {
-    color: #a020f0;
-}
-.org-org-level-4 {
-    color: #b22222;
-}
-.org-org-level-5 {
-    color: #228b22;
-}
-.org-org-level-6 {
-    color: #008b8b;
-}
-.org-org-level-7 {
-    color: #483d8b;
-}
-.org-org-level-8 {
-    color: #8b2252;
-}
-.org-org-link {
-    color: #3a5fcd;
-    text-decoration: underline;
-}
-.org-org-list-dt {
-    font-weight: 700;
-}
-.org-org-macro {
-    color: #8b4513;
-}
-.org-org-meta-line {
-    color: #b22222;
-}
-.org-org-mode-line-clock {
-    color: #000;
-    background-color: #bfbfbf;
-}
-.org-org-mode-line-clock-overrun {
-    color: #000;
-    background-color: red;
-}
-.org-org-priority {
-    color: #a020f0;
-}
-.org-org-quote {
-    color: #7f7f7f;
-}
-.org-org-scheduled {
-    color: #006400;
-}
-.org-org-scheduled-previously {
-    color: #b22222;
-}
-.org-org-scheduled-today {
-    color: #006400;
-}
-.org-org-sexp-date,.org-org-special-keyword {
-    color: #a020f0;
-}
-.org-org-table {
-    color: #00f;
-}
-.org-org-tag,.org-org-tag-group {
-    font-weight: 700;
-}
-.org-org-target {
-    text-decoration: underline;
-}
-.org-org-time-grid {
-    color: #b8860b;
-}
-.org-org-todo {
-    color: red;
-    font-weight: 700;
-}
-.org-org-upcoming-deadline {
-    color: #b22222;
-}
-.org-org-verbatim,.org-org-verse {
-    color: #7f7f7f;
-}
-.org-org-warning {
-    color: red;
-    font-weight: 700;
-}
-.org-outline-1 {
-    color: #00f;
-}
-.org-outline-2 {
-    color: sienna;
-}
-.org-outline-3 {
-    color: #a020f0;
-}
-.org-outline-4 {
-    color: #b22222;
-}
-.org-outline-5 {
-    color: #228b22;
-}
-.org-outline-6 {
-    color: #008b8b;
-}
-.org-outline-7 {
-    color: #483d8b;
-}
-.org-outline-8 {
-    color: #8b2252;
-}
-.org-preprocessor {
-    color: #483d8b;
-}
-.org-regexp-grouping-backslash,.org-regexp-grouping-construct {
-    font-weight: 700;
-}
-.org-region {
-    background-color: gtk_selection_bg_color;
-}
-.org-secondary-selection {
-    background-color: #ff0;
-}
-.org-shadow {
-    color: #7f7f7f;
-}
-.org-show-paren-match {
-    background-color: #40e0d0;
-}
-.org-show-paren-mismatch {
-    color: #fff;
-    background-color: #a020f0;
-}
-.org-string {
-    color: #8b2252;
-}
-.org-success {
-    color: #228b22;
-    font-weight: 700;
-}
-.org-table-cell {
-    color: #e5e5e5;
-    background-color: #00f;
-}
-.org-tooltip {
-    color: #000;
-    background-color: #ffffe0;
-}
-.org-trailing-whitespace {
-    background-color: red;
-}
-.org-type {
-    color: #228b22;
-}
-.org-underline {
-    text-decoration: underline;
-}
-.org-variable-name {
-    color: sienna;
-}
-.org-warning {
-    color: #ff8c00;
-    font-weight: 700;
-}
-.org-warning-1 {
-    color: red;
-    font-weight: 700;
-}
-@media (min-width: 769px) {
-    body {
-        width: 710px;
-    }
-}
-::selection {
-    background: #d6edff;
-}
-.title {
-    margin: auto;
-    color: #000;
-}
-.subtitle,.title {
-    text-align: center;
-}
-.subtitle {
-    font-size: medium;
-    font-weight: 700;
-}
-.abstract {
-    margin: auto;
-    width: 80%;
-    font-style: italic;
-}
-.abstract p:last-of-type:before {
-    content: " ";
-    white-space: pre;
-}
-.status {
-    font-size: 90%;
-    margin: 2em auto;
-}
-[class^=section-number-] {
-    margin-right: .5em;
-}
-[id^=orgheadline] {
-    clear: both;
-}
-#footnotes {
+    /* Calibri is MSO defalt font */
+    font-family: Calibri,Helvetica,Sans-Serif;
+    /* size 11 */
     font-size: 90%;
 }
-.footpara {
-    display: inline;
-    margin: .2em auto;
+.src,.done,.todo,code {
+    /* Monospace fonts for code */
+    font-family: Inconsolata,Consolas,Monospace;
 }
-.footdef {
-    margin-bottom: 1em;
+.src,code {
+    /* match the font size of the rest of the email */
+    font-size: 100%;
 }
-.footdef sup {
-    padding-right: .5em;
-}
-figure {
-    padding: 0;
-    margin: 0;
-    text-align: center;
-}
-img {
-    max-width: 100%;
-    vertical-align: middle;
-}
-h1,h2,h3,h4,h5,h6 {
-    color: #a5573e;
-    line-height: 1.6em;
-    font-family: Calibri,sans-serif;
-}
-h4,h5,h6 {
-    font-size: 1.1em;
-}
-dt {
-    font-weight: 700;
-}
-caption.t-above {
-    caption-side: top;
-}
-caption.t-bottom {
-    caption-side: bottom;
-}
-th.org-center,th.org-left,th.org-right {
-    text-align: center;
-}
-td.org-right {
-    text-align: right;
-}
-td.org-left {
-    text-align: left;
-}
-td.org-center {
-    text-align: center;
-}
-blockquote {
-    margin: 1em 2em;
-    padding-left: 1em;
-    border-left: 3px solid #ccc;
-}
-kbd {
-    background-color: #f7f7f7;
-    font-size: 80%;
-    margin: 0 .1em;
-    padding: .1em .6em;
-}
-.todo {
-    background-color: red;
-    padding: 2px;
-}
-.done,.todo {
-    color: #fff;
-    border-radius: 3px;
-    background-clip: padding-box;
-    font-size: 80%;
-    font-family: Inconsolata,monospace;
-}
-.done {
-    background-color: green;
-    padding: 3px;
-}
-.priority {
-    color: orange;
-    font-family: Inconsolata,monospace;
-}
-#table-of-contents li {
-    clear: both;
-}
-.inlinetask {
-    background: #ffc;
-}
-#org-div-home-and-up {
-    font-size: 70%;
-    text-align: right;
-    white-space: nowrap;
-}
-.code-highlighted {
-    background-color: #ff0;
-}
-.org-src-container {
-    font-family: Inconsolata,monospace;
-    font-size: 90%;
-    position: relative;
-    background-color: #E5EBF4;
-    mso-line-height-rule: exactly;
-    line-height: 100%;
-    margin-top: 1em;
-    margin-bottom: 1em;
-}
-p,pre,span {
-    /* This it make sure we are using single line spaceing */
-    mso-line-height-rule: exactly;
-    line-height: 110%;
-    margin-bottom: 1em;
+h1,h2,h3 {
+    /* we don't need large headers in emails */
+    font-size: 110%;
 }
 pre {
-    /* dont double space source code blocks */
+    /* don't double space source code blocks */
     margin: 0px;
 }
-.linenr {
-    user-select: none;
-    -ms-user-select: none; /* IE 10+ */
+.src {
+    /* borders do not render well in email */
+    border: none;
+}
+blockquote {
+    /* Github style quote */
+    margin-left: 2em;
+    padding-left: 1em;
+    border-left: 3px solid #CCC;
+}
+h1,h2,h3,h4,h5,h6 {
+    /* Official Intel blue */
+    color: #0071C5;
 }
 i {
-    background-color: #ffff99;
+    /* I use italics to draw emphasis to main points and color helps it stand out */
+    background-color: #FF9;
 }
-th {
-    background-color: #E5EBF4;
+.src,code,th {
+    background-color: #E1EAEA;
+}
+.todo {
+    background-color: #F33;
+}
+.done {
+    background-color: #3C3;
+}
+.done,.todo {
+    color: white;
+    font-size: 80%;
 }
