make block quotes look more "Github" like in appearance

--- a/styles/email/css/email.css
+++ b/styles/email/css/email.css
@@ -26,7 +26,8 @@ pre {
 }
 blockquote {
     /* Github style quote */
-    margin-left: 2em;
+    color: #666;
+    margin-left: 0em;
     padding-left: 1em;
     border-left: 3px solid #CCC;
 }
